src/sycoca/kbuildsycoca_p.h
@@ -127,7 +127,7 @@ private:
     }
 
     QStringList m_changedResources;
-    QStringList m_allResourceDirs;
+    QMap<QString, qint64> m_allResourceDirs; // dir, mtime in ms since epoch
     QString m_trackId;
 
     QByteArray m_resource; // e.g. "services" (old resource name, now only used for the signal, see kctimefactory.cpp)
